WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145413
Assertion hit in WebPage::didChangeSelection()
https://bugs.webkit.org/show_bug.cgi?id=145413
Summary
Assertion hit in WebPage::didChangeSelection()
Chris Dumez
Reported
2015-05-27 14:11:38 PDT
We sometimes hit the "ASSERT(layoutCount == view->layoutCount())" assertion in WebPage::didChangeSelection(). We manage to prevent synchronous layouts in most cases when calling editorState() however, it seems it can still happening. Crashing in this case seems overkill and can be annoying to other developers, especially considering the implications are only performance-related. We should drop the assertion. Radar: <
rdar://problem/21001129
>
Attachments
Patch
(2.53 KB, patch)
2015-05-27 14:14 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-05-27 14:14:58 PDT
Created
attachment 253800
[details]
Patch
Chris Dumez
Comment 2
2015-05-27 14:51:36 PDT
Comment on
attachment 253800
[details]
Patch Clearing flags on attachment: 253800 Committed
r184923
: <
http://trac.webkit.org/changeset/184923
>
Chris Dumez
Comment 3
2015-05-27 14:51:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug